--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
       <p>Has completado todos los retos con éxito.</p>
       <p><strong>Tu puntaje final de lógica fue:</strong> <span id="puntaje-final"></span></p>
       <p>¡Eres un campeón de la concentración! 🏅</p>
-      <img id="imagen-final" src="images/trofeo.png" alt="Trofeo" />
+      <img id="imagen-final" src="Images/trofeo.png" alt="Trofeo" />
     </div>
   </div>
 </div>
 <script src="script.js"></script>
 </body>
 </html>
+
